...

    var body: some View {
        if let bike {
            NavigableWebView(url: $url)
                .toolbar(content: {
                    ToolbarItem(placement: .topBarTrailing) {
                        Button("Edit", systemImage: "pencil") {
                            if let editUrl = bike.editUrl {
                                url = editUrl
                            }
                        }
                    }
                })
...
